--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -172,7 +172,7 @@
                         <li class="nav-item active">
                             <a href="/Admin/Client" class="LoadingDiv">
                                 <span class="icon-holder">
-                                    <i uk-icon="person-add"></i>
+                                    <i uk-icon="people"></i>
                                 </span>
                                 <span class="title">کاربران</span>
                             </a>
