--- a/GhasreMobile/Areas/Admin/Views/Client/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Client/Components/Edit.cshtml
@@ -13,27 +13,28 @@
       data-ajax-mode="replace"
       data-ajax-complete="EndCatagoryCreate()"
       data-ajax-update="#ajaxresult">
+    <input type="hidden" asp-for="ClientId" />
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>نام کاربر</label>
-                <input asp-for="Name" type="text" class="form-control form-control-sm" placeholder="مثال: پیمان معادی">
+                <input value="@Model.Name" required name="Name" class="form-control form-control-sm" placeholder="مثال: پیمان معادی">
             </div>
             <div class="form-group col-md-3">
                 <label>تعیین نقش</label>
                 @{ 
                     IEnumerable<DataLayer.Models.TblRole> roles = ViewBag.Roles;
                 }
-            <select class="form-control form-control-sm" asp-for="RoleId">
+            <select class="form-control form-control-sm" name="RoleId">
                 @foreach (var item in roles)
                 {
                     if (item.RoleId == Model.RoleId)
                     {
-                        <option selected value="@item.RoleId">@item.Name</option>
+                        <option selected value="@item.RoleId">@item.Title</option>
                     }
                     else
                     {
-                        <option value="@item.RoleId">@item.Name</option>
+                        <option value="@item.RoleId">@item.Title</option>
                     }
                 }
             </select>
@@ -43,16 +44,17 @@
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label>شماره تماس</label>
-                <input asp-for="TellNo" type="tel" class="form-control form-control-sm" placeholder="09145416" disabled>
+                <input value="@Model.TellNo" class="form-control form-control-sm" placeholder="09145416" disabled>
+                <input type="hidden" asp-for="TellNo" />
             </div>
             <div class="form-group col-md-3">
                 <label>کیف پول</label>
-                <input asp-for="Balance" type="number" class="form-control form-control-sm" placeholder="840000" disabled>
+                <input value="@Model.Balance" class="form-control form-control-sm" placeholder="840000" disabled>
             </div>
 
             <div class="form-group col-md-3">
                 <label>تاریخ ثبت نام</label>
-                <input asp-for="DateCreated" type="date" class="form-control form-control-sm" placeholder="840000" disabled>
+                <input value="@Model.DateCreated" type="date" class="form-control form-control-sm" placeholder="840000" disabled>
             </div>
         </div>
     </div>
