--- a/GhasreMobile/Areas/Admin/Views/Client/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Client/Index.cshtml
@@ -14,8 +14,8 @@
                     <div class="card-form form-row">
                         <div class="form-inline">
                             <div class="form-group mx-sm-1 mb-2 mr-1 mr-md-0">
-                                <input id="SearchInput" class="form-control uk-text-small" type="text" placeholder="نام کاربر" value="">
-                                <input id="SearchInput" class="form-control uk-text-small mr-md-2 mt-2 mt-md-0" type="text" placeholder="شماره تماس" value="">
+                                <input id="SearchInputName" class="form-control uk-text-small" type="text" placeholder="نام کاربر" value="">
+                                <input id="SearchInputTelNo" class="form-control uk-text-small mr-md-2 mt-2 mt-md-0" type="text" placeholder="شماره تماس" value="">
                                 <button onclick="BtnSearch()" type="button" class="btn btn-primary btn-sm mr-md-3 mt-2 mt-md-0">جستجو<span class="icon-holder uk-margin-small-right" uk-icon="search-outline"></span></button>
                             </div>
                         </div>
@@ -43,7 +43,7 @@
                                     <td>@item.Name</td>
                                     <td>@item.TellNo</td>
                                     <td class="text-success">@item.Balance<span>تومان</span></td>
-                                    <td>@item.Role.Name</td>
+                                    <td>@item.Role.Title</td>
                                     <td>@item.DateCreated.Value.AllToShamsi()</td>
                                     <td>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="ویرایش">
@@ -75,6 +75,15 @@
                 $(".modal-content").html(result);
             });
         }
+
+
+        function SearchInputName() {
+            var SearchInputName = $("#SearchInputName").val();
+            var SearchInputTelNo = $("#SearchInputTelNo").val();
+            window.location.href = "/Admin/Client?page=1&Name=" + SearchInputName + "&TelNo=" + SearchInputTelNo;
+        }
+
+
     </script>
 }
 
