--- a/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
@@ -1,8 +1,10 @@
-﻿
+﻿@model IEnumerable<DataLayer.Models.TblOnlineOrder>
 @{
     ViewData["Title"] = "سفارشات انلاین";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
+@using GhasreMobile.Utilities;
 
 <div class="row flex-div">
     <div class="col-md-12 flex-div pb-3 pt-3">
@@ -39,25 +41,36 @@
                         </thead>
                         <tbody>
 
-                            <tr>
-                                <td>سامسونگ</td>
-                                <td>ali00</td>
-                                <td>1399</td>
-                                <td>
-                                    <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="خوانده شده">
-                                        <span class="text-success" uk-icon="checkmark-circle-outline"></span>
-                                    </span>
-                                    <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="خوانده نشده">
-                                        <span class="text-danger" uk-icon="close-circle-outline"></span>
-                                    </span>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@item.Title</td>
+                                    <td>@item.Client.Name</td>
+                                    <td>@item.DateSubmited.Value.AllToShamsi()</td>
+                                    <td>
 
-                                </td>
-                                <td>
-                                    <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
-                                        <a onclick="Info()" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
-                                    </span>
-                                </td>
-                            </tr>
+
+                                        @if (item.IsRead)
+                                        {
+                                            <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="خوانده شده">
+                                                <span class="text-success" uk-icon="checkmark-circle-outline"></span>
+                                            </span>
+                                        }
+                                        else
+                                        {
+                                            <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="خوانده نشده">
+                                                <span class="text-danger" uk-icon="close-circle-outline"></span>
+                                            </span>
+                                        }
+
+                                    </td>
+                                    <td>
+                                        <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
+                                            <a onclick="Info(@item.ClientId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                        </span>
+                                    </td>
+                                </tr>
+                            }
 
                         </tbody>
                     </table>
@@ -66,7 +79,7 @@
 
             <div class="card-footer bg-white">
                 <nav aria-label="Page navigation example">
-                    @*@await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })*@
+                    @await this.Component.InvokeAsync("Pager", new { PagingList = this.Model })
                 </nav>
             </div>
         </div>
@@ -80,7 +93,7 @@
             $.get("/Admin/OnlineOrder/Info/" + id, function (result) {
                 $(".modal-content").html(result);
             });
-        }        
+        }
     </script>
 
 }
