--- a/GhasreMobile/Areas/User/Views/Cart/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Cart/Index.cshtml
@@ -4,4 +4,5 @@
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
-<partial name="_Cart" model="Model"/>
+<partial name="_Cart" model="Model" />
+<a href="/User/Order/Finalize" class="btn btn-primary uk-margin-auto-left">نهایی سازی خرید</a>
