--- a/GhasreMobile/Areas/User/Views/Order/Finalize.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/Finalize.cshtml
@@ -4,7 +4,7 @@
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
-<div class="col g-3">
+<div class="col g-3 uk-margin-medium-bottom">
 
     <div class="mat-card">
         <div class="rowr uk-margin-small-bottom">
@@ -13,10 +13,22 @@
             </h3>
             <img src="~/st/r/logo.jpg" height="48" width="48" alt="" />
         </div>
-        Laoreet ac, aliquam sit amet justo nunc tempor, metus vel placerat suscipit, orci nisl iaculis eros, a tincidunt nisi odio eget lorem nulla condimentum tempor mattis ut vitae feugiat augue cras ut metus a risus iaculis scelerisque eu ac ante fusce non varius purus aenean nec magna felis fusce vestibulum.
+        صاحب کار خود نشان دهند که صفحه طراحی یا صفحه بندی شده بعد از اینکه متن در آن قرار گیرد چگونه به نظر می‌رسد و قلم‌ها و اندازه‌بندی‌ها چگونه در نظر گرفته شده‌است. از آنجایی که طراحان عموما نویسنده متن نیستند و وظیفه رعایت حق تکثیر متون را ندارند و در همان حال کار آنها به نوعی وابسته به متن می‌باشد آنها با استفاده از محتویات ساختگی، صفحه گرافیکی خود را صفحه‌آرایی می‌کنند تا مرحله طراحی و صفحه‌بندی را به پایان برند.
     </div>
 
-    <partial name="_Cart" />
+    <partial name="_Cart" model="new List<ShopCartItemVm>()" />
+
+    <div class="mat-card">
+        <h4 class="uk-margin-small-bottom">
+            کد تخفیف
+        </h4>
+        <div class="rowr g-2">
+            <input type="text" placeholder="کد تخفیف را وارد کنید" class="entry flex-auto" value="" />
+            <button class="btn btn-primary unselectable"> CODEX 64%</button>
+            <button class="btn btn-dashed">اعمال</button>
+        </div>
+        <div class="fg-col"> <label class="text-danger">کد تخفیف صحیح نمی باشد</label></div>
+    </div>
 
     <div class="mat-card">
         <h4 class="uk-margin-small-bottom">
@@ -52,13 +64,20 @@
         </div>
     </div>
 
-    <div class="mat-card">
-        <h4 class="uk-margin-small-bottom">
-            انتخاب آدرس
-        </h4>
-        <div class="fg-col">
-            <label class="fg-label">آدرس</label>
-            <textarea class="entry"></textarea>
+    <hr class="uk-divider-icon uk-margin" />
+
+    <div class="mat-card col">
+        <p class="uk-alert uk-alert-warning">
+            مشتری محترم، لطفا دقت کنید مبلغ پرداخت شده غیر قابل عودت می باشد، لطفا قبل از خرید اطمینان حاصل فرمایید
+        </p>
+        <div class="rowr">
+            <h3 class="row g-1">
+                <span>
+                    ريال
+                </span>
+                463,000,000
+            </h3>
+            <button class="btn btn-primary uk-margin-auto-right">پرداخت</button>
         </div>
     </div>
 
