--- a/GhasreMobile/Views/Affiliate/StoreView.cshtml
+++ b/GhasreMobile/Views/Affiliate/StoreView.cshtml
@@ -12,7 +12,7 @@
 
 @section Aside{
 
-    <div class="affiliates mat mat-border col">
+    <div swap="swAffiliates" class="affiliates mat mat-border col">
         <div class="mat-pad uk-padding-remove-bottom">
             <h3 class="uk-margin-remove uk-padding-remove">
                 شعب ما
@@ -66,8 +66,6 @@
         </ul>
     </div>
 
-    <partial name="_Ad" />
-
 }
 
 <nav class="breadcrumb uk-padding-remove">
@@ -108,6 +106,8 @@
 
 </div>
 
+<div role="none" id="swAffiliates"></div>
+
 @section Scripts{
 
     <script src="~/js/leaflet.js"></script>
@@ -135,16 +135,16 @@
         )
             .addTo(map).bindPopup(
                 `
-                        <div class="aff-marker">
-                            <h4>شعبه شهناز</h4>
-                            <p>
-                                این یک آدرس می باش. آدرس یک شعبه که در هحله سضناز قرار دارد. این متن برای تست و به صورت کاملا آربیتری نوشته شده است
-                            </p>
-                            <a href="" dir="rtl">
-                                مشاهده
-                            </a>
-                        </div>
-                        `
+                            <div class="aff-marker">
+                                <h4>شعبه شهناز</h4>
+                                <p>
+                                    این یک آدرس می باش. آدرس یک شعبه که در هحله سضناز قرار دارد. این متن برای تست و به صورت کاملا آربیتری نوشته شده است
+                                </p>
+                                <a href="" dir="rtl">
+                                    مشاهده
+                                </a>
+                            </div>
+                            `
             ).openPopup();
 
     </script>
