--- a/GhasreMobile/Views/Search/Index.cshtml
+++ b/GhasreMobile/Views/Search/Index.cshtml
@@ -62,11 +62,11 @@
 
     </div>
 
-    <div swap="hello"><partial name="_Ad" /></div>
+    <div swap="Ad"><partial name="_Ad" /></div>
 
 }
 
-<div id="filter"></div>
+<div role="none" id="filter"></div>
 
 <div class="search-grid form">
     <div class="form-header">
@@ -90,6 +90,8 @@
         <partial name="_ProductBlock" />
     </div>
 </div>
+
+<div role="none" id="Ad"></div>
 
 <div class="loading">
     <img src="~/st/v/loading.svg" />
