--- a/GhasreMobile/Views/Shared/_ExpressProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ExpressProductBlock.cshtml
@@ -1,21 +1,21 @@
 ﻿<div class="product-express">
     <div class="head">
         <h3>پیشنهاد ویژه</h3>
-        <ul class="timer">
+        <ul class="timer" countdown="Tue Mar 02 2021 11:26:54 GMT+0330 (Iran Standard Time)">
             <li>
-                <label>04</label>
+                <label day></label>
                 <span>روز</span>
             </li>
             <li>
-                <label>16</label>
+                <label hour></label>
                 <span>ساعت</span>
             </li>
             <li>
-                <label>25</label>
+                <label minute></label>
                 <span>دقیقه</span>
             </li>
             <li>
-                <label>32</label>
+                <label second></label>
                 <span>ثانیه</span>
             </li>
         </ul>
