--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -261,7 +261,7 @@
                             <a href="/Contact">تماس با ما</a>
                         </li>
                         <li>
-                            <a href="/Affiliates">مشاهده نمایندگی ها</a>
+                            <a href="/Affiliate">مشاهده نمایندگی ها</a>
                         </li>
                         <li>
                             <a href="">پشتیبانی و تیکت</a>
