--- a/GhasreMobile/Areas/User/Views/Wallet/Index.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/Index.cshtml
@@ -8,7 +8,7 @@
     <h2 class="title">
         کیف پول
     </h2>
-    <a href="/User/Wallet/Charge"  class="btn button">
+    <a href="/User/Wallet/Charge" class="btn button">
         شارژ
     </a>
     <div class="balance">
@@ -16,3 +16,5 @@
         <span class="t">تومان</span>
     </div>
 </div>
+
+<partial name="_TransactionHistory" />
