--- a/GhasreMobile/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Views/Shared/_Layout.cshtml
@@ -100,9 +100,18 @@
                     <div class="badge">
                         <span id="countShopCart"></span>
                     </div>
-                    <button>
-                        <span uk-icon="cart-outline"></span>
-                    </button>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <a href="/User/Cart">
+                            <span uk-icon="cart-outline"></span>
+                        </a>
+                    }
+                    else
+                    {
+                        <a href="/ShopCart">
+                            <span uk-icon="cart-outline"></span>
+                        </a>
+                    }
                 </div>
             </div>
 
