--- a/GhasreMobile/Views/ShopCart/Comparison.cshtml
+++ b/GhasreMobile/Views/ShopCart/Comparison.cshtml
@@ -1,7 +1,6 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "سبد خرید";
     Layout = "_ShopCartLayout.cshtml";
 }
 
-<partial name="_Cart" />
+<partial name="_Comparison" />
