--- a/GhasreMobile/Areas/Admin/Views/Card/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Card/Components/Create.cshtml
@@ -25,6 +25,11 @@
                 <input asp-for="Name" type="text" class="form-control form-control-sm" placeholder="مثال: علی علیزاده">
                 <span class="text-danger" asp-validation-for="AccountNo"></span>
             </div>
+            <div class="form-group col-lg-6">
+                <label>نام بانک</label>
+                <input asp-for="BankName" type="text" class="form-control form-control-sm" placeholder="مثال: علی علیزاده">
+                <span class="text-danger" asp-validation-for="BankName"></span>
+            </div>
         </div>
     </div>
     <div class="modal-footer justify-content-end">
