--- a/GhasreMobile/Areas/Admin/Views/Card/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Card/Components/Edit.cshtml
@@ -13,7 +13,8 @@
       data-ajax-mode="replace"
       data-ajax-complete="EndCatagoryCreate()"
       data-ajax-update="#ajaxresult">
-    <input asp-for="BankAccountId" />
+    <input type="hidden" asp-for="BankAccountId" />
+    <input type="hidden" asp-for="IsActive" />
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-lg-6">
@@ -25,6 +26,11 @@
                 <label>صاحب کارت</label>
                 <input asp-for="Name" class="form-control form-control-sm" placeholder="مثال: علی علیزاده">
                 <span class="text-danger" asp-validation-for="Name"></span>
+            </div>
+            <div class="form-group col-lg-6">
+                <label>نام بانک</label>
+                <input asp-for="BankName" type="text" class="form-control form-control-sm" placeholder="مثال: علی علیزاده">
+                <span class="text-danger" asp-validation-for="BankName"></span>
             </div>
         </div>
     </div>
