--- a/GhasreMobile/Areas/Admin/Views/Product/Components/AddSpecialOffer.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Components/AddSpecialOffer.cshtml
@@ -1,29 +1,38 @@
-﻿
+﻿@model DataLayer.Models.TblSpecialOffer
 <div class="modal-header">
     <h6 class="modal-title" id="modalCenterTitle">
         افزودن پیشنهاد ویژه برای
-        <span>samsung A71</span>
+        <span>@ViewBag.Product</span>
     </h6>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-<form>
+<form asp-controller="SpecialOffer" asp-action="CreateSpecialOffer" asp-area="Admin"
+      data-ajax="true"
+      data-ajax-method="POST"
+      data-ajax-mode="replace"
+      data-ajax-complete="EndCatagoryCreate()"
+      data-ajax-update="#ajaxresult">
+    <input type="hidden" asp-for="ProductId" value="@ViewBag.ProductId" />
     <div class="modal-body">
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label>درصد تخفیف</label>
-                <input type="number" class="form-control form-control-sm" placeholder="مثال: 30">
-                <span class="text-danger"></span>
+                <input asp-for="Discount" type="number" class="form-control form-control-sm" placeholder="مثال: 30">
+                <span class="text-danger" asp-validation-for="Discount"></span>
             </div>
             <div class="form-group col-md-6">
                 <label>چند روز</label>
                 <input name="Till" required type="number" class="form-control form-control-sm" placeholder="مثال: 2">
                 <span class="text-danger"></span>
-            </div>            
+            </div>
         </div>
     </div>
     <div class="modal-footer justify-content-end">
         <button type="submit" class="btn btn-success btn-sm text-white">افزودن<span class="icon-holder uk-margin-small-right" uk-icon="add-circle-outline"></span></button>
     </div>
 </form>
+
+<script src="~/Validate/jquery.validate.min.js"></script>
+<script src="~/Validate/jquery.validate.unobtrusive.js"></script>
