--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -169,6 +169,16 @@
                                 <span class="title">نظرات</span>
                             </a>
                         </li>
+
+                        <li class="nav-item active">
+                            <a href="/Admin/Notification" class="LoadingDiv">
+                                <span class="icon-holder">
+                                    <i uk-icon="notifications"></i>
+                                </span>
+                                <span class="title">اعلانات</span>
+                            </a>
+                        </li>
+
                         <li class="nav-item active">
                             <a href="/Admin/Client" class="LoadingDiv">
                                 <span class="icon-holder">
@@ -244,7 +254,7 @@
                         <li class="nav-item dropdown">
                             <a class="dropdown-toggle" href="javascript:void(0);">
                                 <span class="icon-holder">
-                                    <i uk-icon="headset-outline"></i>                                    
+                                    <i uk-icon="headset-outline"></i>
                                 </span>
                                 <span class="title">پشتیبانی</span>
                                 <span class="arrow" uk-icon="chevron-forward">
@@ -270,7 +280,7 @@
                             </ul>
                         </li>
 
-                        
+
                     </ul>
                 </div>
             </div>
