--- a/GhasreMobile/wwwroot/css/pages/user.scss
+++ b/GhasreMobile/wwwroot/css/pages/user.scss
@@ -62,6 +62,13 @@ $nav-height: 64px;
     height: 110px;
 }
 
+@media only screen and (max-width: 960px) {
+    .space-recompinsate {
+        height: 64px;
+    }
+}
+
+
 /*#region Main */
 $grid-gap: 16px;
 $aside-width: 142px;
