--- a/GhasreMobile/Areas/User/Views/Wallet/_TransactionHistory.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/_TransactionHistory.cshtml
@@ -1,34 +1,34 @@
-﻿<table class="table mat-card" dir="rtl">
+﻿@model IEnumerable<TblWallet>
+<table class="table mat-card" dir="rtl">
     <thead>
         <tr>
             <th>مقدار</th>
             <th>نوع</th>
             <th>تاریخ</th>
             <th>توضیحات</th>
-            <th>تایید شده</th>
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>1،380،000</td>
-            <td>واریز</td>
-            <td>1399/08/09</td>
-            <td>بدون توضیحات</td>
-            <td>
-                <span class="badge">تایید</span>
-            </td>
-        </tr>
-        <tr>
-            <td>640،000</td>
-            <td>برداشت</td>
-            <td>1399/12/09</td>
-            <td>
-                خرید گوشی موبایل
-                <a href="/" class="link-text">سامسونگ</a>
-            </td>
-            <td>
-                <span class="badge">تایید</span>
-            </td>
-        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.Amount</td>
+
+                @if (item.IsDeposit)
+                {
+                    <td>
+                        واریز
+                    </td>
+                }
+                else
+                {
+                    <td>
+                        برداشت
+                    </td>
+                }
+                <td>@item.Date.DateToShamsi()</td>
+                <td>@item.Description</td>
+            </tr>
+        }
     </tbody>
 </table>
