--- a/GhasreMobile/Areas/User/_ViewImports.cshtml
+++ b/GhasreMobile/Areas/User/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using DataLayer.ViewModels
 @using DataLayer.Models
+@using GhasreMobile.Utilities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
