--- a/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DataLayer.Models.TblOnlineOrder>
 @{
-    ViewData["Title"] = "سفارشات انلاین";
+    ViewData["Title"] = "سفارشات آفلاین";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
