--- a/GhasreMobile/Areas/User/Views/Cart/Bookmarks.cshtml
+++ b/GhasreMobile/Areas/User/Views/Cart/Bookmarks.cshtml
@@ -1,13 +1,12 @@
-﻿
+﻿@model IEnumerable<TblProduct>
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "علاقه مندی ها";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
 }
 
 <div class="bookmarks mat-card">
-    <partial name="_ProductBlock" />
-    <partial name="_ProductBlock" />
-    <partial name="_ProductBlock" />
-    <partial name="_ProductBlock" />
-    <partial name="_ProductBlock" />
+    @foreach (var item in Model)
+    {
+        <partial name="_ProductBlock" model="item" />
+    }
 </div>
