--- a/GhasreMobile/Views/Affiliate/Index.cshtml
+++ b/GhasreMobile/Views/Affiliate/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<TblStore>
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -19,50 +20,21 @@
             </h3>
         </div>
         <ul>
-            <li>
-                <a href="">
-                    <h4>
-                        عباسی
-                    </h4>
-                    <label>روبروی کلانتری</label>
-                    <div class="tel">
-                        <span uk-icon="call-outline">36554895</span>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <h4>
-                        عباسی
-                    </h4>
-                    <label>روبروی کلانتری</label>
-                    <div class="tel">
-                        <span uk-icon="call-outline">36554895</span>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <h4>
-                        عباسی
-                    </h4>
-                    <label>روبروی کلانتری</label>
-                    <div class="tel">
-                        <span uk-icon="call-outline">36554895</span>
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="">
-                    <h4>
-                        عباسی
-                    </h4>
-                    <label>روبروی کلانتری</label>
-                    <div class="tel">
-                        <span uk-icon="call-outline">36554895</span>
-                    </div>
-                </a>
-            </li>
+            @foreach (var item in Model)
+            {
+                <li>
+                    <a href="/StoreView/@item.StoreId/@item.Name.Replace(" ","-")">
+                        <h4>
+                            @item.Name
+                        </h4>
+                        <label>@item.Address</label>
+                        <div class="tel">
+                            <span uk-icon="call-outline">@item.TellNo</span>
+                        </div>
+                    </a>
+                </li>
+
+            }
         </ul>
     </div>
 
