--- a/GhasreMobile/Views/Shared/_Cart.cshtml
+++ b/GhasreMobile/Views/Shared/_Cart.cshtml
@@ -33,9 +33,9 @@
                     </td>
                     <td>
                         <div class="counter">
-                            <button onclick="window.location.href = '/User/Cart/UpDownCount/@item.ProductID?colorId=@item.ColorID&&command=up&&ReturnUrl=' + window.location.href" uk-icon="ratio:.6;icon:add-outline"></button>
+                            <button onclick="window.location.href = '/ShopCart/UpDownCount/@item.ProductID?colorId=@item.ColorID&&command=up&&ReturnUrl=' + window.location.href" uk-icon="ratio:.6;icon:add-outline"></button>
                             <label>@item.Count</label>
-                            <button onclick="window.location.href = '/User/Cart/UpDownCount/@item.ProductID?colorId=@item.ColorID&&command=down&&ReturnUrl=' + window.location.href" uk-icon="ratio:.6;icon:remove-outline"></button>
+                            <button onclick="window.location.href = '/ShopCart/UpDownCount/@item.ProductID?colorId=@item.ColorID&&command=down&&ReturnUrl=' + window.location.href" uk-icon="ratio:.6;icon:remove-outline"></button>
                         </div>
                     </td>
                     <td class="price">
