--- a/GhasreMobile/Areas/Admin/Views/Client/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Client/Index.cshtml
@@ -42,7 +42,7 @@
                                 <tr>
                                     <td>@item.Name</td>
                                     <td>@item.TellNo</td>
-                                    <td class="text-success">@item.Balance<span>تومان</span></td>
+                                    <td class="text-success">@item.Balance<span>ريال</span></td>
                                     <td>@item.Role.Title</td>
                                     <td>@item.DateCreated.Value.AllToShamsi()</td>
                                     <td>
