--- a/GhasreMobile/Views/Shared/_Cart.cshtml
+++ b/GhasreMobile/Views/Shared/_Cart.cshtml
@@ -69,7 +69,7 @@
                 @Model.Sum(i => i.Sum).Value.ToString("#,0")
             </h3>
             <span>
-                تومان
+                ريال
             </span>
         </div>
     </div>
