--- a/GhasreMobile/Views/Shared/_ExpressProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ExpressProductBlock.cshtml
@@ -44,7 +44,7 @@
             <span>4,680,000</span>
         </span>
         <span class="price">
-            <span class="t">تومان</span>
+            <span class="t">ريال</span>
             <span>3,999,000</span>
         </span>
     </div>
