--- a/GhasreMobile/Views/Shared/_ProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ProductBlock.cshtml
@@ -25,7 +25,7 @@
         @if (Model.PriceAfterDiscount == 0)
         {
             <span class="price">
-                <span class="t">تومان</span>
+                <span class="t">ريال</span>
                 <span>@Model.PriceBeforeDiscount.Value.ToString("#,0")</span>
             </span>
         }
@@ -35,7 +35,7 @@
                 <span>@Model.PriceBeforeDiscount.Value.ToString("#,0")</span>
             </span>
             <span class="price">
-                <span class="t">تومان</span>
+                <span class="t">ريال</span>
                 <span>@Model.PriceAfterDiscount.Value.ToString("#,0")</span>
             </span>
         }
