Entry Shadow Fix

--- a/GhasreMobile/wwwroot/css/pages/account.scss
+++ b/GhasreMobile/wwwroot/css/pages/account.scss
@@ -43,7 +43,7 @@ body {
         top: 0;
         bottom: 0;
         background-color: transparent;
-        filter: drop-shadow(12px 0 12px rgba(0,0,0,.24));
+        filter: drop-shadow(35px 0 22px rgba(0,0,0,0.2));
     }
 
     &-image {
