--- a/GhasreMobile/Views/Shared/_ProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ProductBlock.cshtml
@@ -42,9 +42,13 @@
     }
     else
     {
-        <button class="button">
-            <span>ناموجود</span>
-        </button>
+        <div class="unavailable">
+            <span>
+                <span></span>
+                ناموجود
+            </span>
+            <button href="/" uk-tooltip="موجود شد خبر بده" class="link-text" uk-icon="notifications-outline"></button>
+        </div>
     }
 
 
