--- a/GhasreMobile/Views/Shared/Components/SliderView/SliderView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/SliderView/SliderView.cshtml
@@ -9,13 +9,12 @@
                 <a href="@item.Link"><img src="~/Images/Slider/@item.ImageUrl" alt="@item.Name" uk-cover></a>
             </li>
         }
-
     </ul>
     <div class="navigation uk-position-bottom-center uk-position-small">
         <ul class="uk-dotnav">
             @foreach (var item in Model)
             {
-                <li uk-slideshow-item="@(Model.ToList().IndexOf(item)+1)"><a href="#">@item.Name</a></li>
+                <li uk-slideshow-item="@(Model.ToList().IndexOf(item))"><a href="#">@item.Name</a></li>
             }
         </ul>
     </div>
