--- a/GhasreMobile/wwwroot/css/Controls.css
+++ b/GhasreMobile/wwwroot/css/Controls.css
@@ -1077,6 +1077,15 @@ textarea {
       margin-bottom: 5px;
       margin-right: 4px;
       font-size: 10px; }
+  .product .unavailable {
+    display: flex;
+    flex-direction: column;
+    height: 62px; }
+    .product .unavailable span {
+      margin: auto;
+      font-size: 16px;
+      color: #666;
+      margin-bottom: 6px; }
 
 .product:hover {
   -moz-box-shadow: rgba(0, 0, 0, 0.12) 0 2px 8px;
